# home-assistant-wakeword-installer

./: .gitignore  .pre-commit-config.yaml  .releaserc  .yamllint.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  hacs.json  info.md  pyproject.toml  renovate.json  requirements-dev.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  hacs.yml  lint.yaml  release.yml  stale.yaml
custom_components/wakeword_installer/: __init__.py  config_flow.py  const.py  manifest.json  repository_manager.py  services.yaml  strings.json
custom_components/wakeword_installer/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_init.py  test_repository_manager.py
